Bug 97272 - memory leak in vp8 encoding
Summary: memory leak in vp8 encoding
Status: RESOLVED FIXED
Alias: None
Product: libva
Classification: Unclassified
Component: intel (show other bugs)
Version: unspecified
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: haihao
QA Contact: Sean V Kelley
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-10 03:25 UTC by Hyunjun Ko
Modified: 2016-08-10 04:42 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
gen8_mfc: fix memory leak during vp8 encoding (932 bytes, patch)
2016-08-10 03:26 UTC, Hyunjun Ko
Details | Splinter Review

Description Hyunjun Ko 2016-08-10 03:25:26 UTC
There's a bug report about this leak in gstreamer-vaapi.
https://bugzilla.gnome.org/show_bug.cgi?id=769689

IMO, this is a leak in va-intel driver.
Comment 1 Hyunjun Ko 2016-08-10 03:26:42 UTC
Created attachment 125659 [details] [review]
gen8_mfc: fix memory leak during vp8 encoding

I'm proposing a patch.
Does this make sense?

Please kindly if I was in violation of some rules.
This is the first time to propose a patch for this project.
Comment 2 haihao 2016-08-10 04:42:02 UTC
Thanks for your patch, applied.

commit 860192924ee81f443c06312dc0fc023822c3f05c
Author: Hyunjun Ko <zzoon@igalia.com>
Date:   Wed Aug 10 12:24:23 2016 +0900

    gen8_mfc: fix memory leak during vp8 encoding


BTW please add Signed-off-by tag at the end of the commit log for your new patch in the future.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.