gen8_mfc: fix memory leak during vp8 encoding

This fixes https://bugs.freedesktop.org/show_bug.cgi?id=97272

Signed-off-by: Hyunjun Ko <zzoon@igalia.com>
(cherry picked from commit 860192924ee81f443c06312dc0fc023822c3f05c)